# MeshEditorLite

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  halfEdgeMesh.h  meshEdit.h  mutablePriorityQueue.h  obj_loader_halfedge.h  shader.h
shaders/: main.vert.glsl
src/: halfEdgeMesh.cpp  main.cpp  meshEdit.cpp
